# PyFoldable

./: .gitignore  AGENTS.md  README.md  REPO_SETUP.md  pyproject.toml
.github/workflows/: tests.yml
configs/foldable/: TIP_HINGED_250_V01.json  TIP_HINGED_250_V02.json
docs/: foldable_conventions.md
examples/: generate_foldable_engineering_report.py  run_cfd_preparation.py  run_deployment_diagnostics.py  run_design_variant_decision_matrix.py  run_design_variant_summary.py  run_design_variant_sweep.py  run_dynamic_spinup.py  run_fixed_vs_foldable_comparison.py  run_foldable_operating_point.py  run_foldable_report_plots.py  run_foldable_sweep.py  run_foldable_visuals.py  run_moment_kinematics_validation.py  run_prescribed_rpm_physics.py
pyfoldable/: __init__.py  comparison.py  decision.py  design_sweep.py  effective_diameter.py  engineering_design_report.py  geometry_helpers.py  integration.py  kinematics.py  models.py  moment_validation.py  performance.py  plots.py  summary.py  validation.py  variants.py
pyfoldable/dynamics/: __init__.py  aero.py  aero_effectiveness.py  calibration.py  cfd_preparation.py  dynamics_frame.py  figures.py  (+27 more)
scripts/: deploy_to_github.sh
tests/: __init__.py  test_comparison.py  test_concept_deployment_mapping.py  test_concept_visualization.py  test_decision.py  test_design_sweep.py  test_effective_diameter.py  test_geometry_helpers.py  test_integration.py  test_kinematics.py  test_moment_validation.py  test_performance.py  test_plots.py  test_reference_scaled_thrust.py  test_summary.py  test_validation.py  test_visualization.py
(+46 files in other folders)
