[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfoldable"
version = "0.2.0"
description = "Tip-hinged foldable propeller analysis for UAV electric propulsion ."
readme = "README.md"
authors = [{ name = "Hüseyin Karakaya" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfoldable*", "pythrust*"]
